--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     
 }
 
-
+                                                    /* ===== Header ===== */
 .header {
     display:flex; 
     flex-wrap: wrap;
@@ -19,6 +19,7 @@ body {
     max-height: 300px;
     min-height: auto;
     margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     
 }
 
@@ -31,7 +32,7 @@ body {
     text-decoration: none;
     font-size: 1.8em; 
     color: #e0fbfc; 
-    
+    transition: color 0.5s, transform 0.5s;
     
 }
 
@@ -72,8 +73,9 @@ main {
     font-family: "Dai Banna SIL", serif;
     font-size: 1.5em;
     width: 90%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 100px auto;
+    
 }
 
 .principal {
@@ -84,6 +86,7 @@ main {
     margin: 0 auto;     
     gap: 10px;  
     padding: 10px;
+    
 }
 .principal img  {
     max-width: 90%;
@@ -92,6 +95,7 @@ main {
     border: #d0e8e959 solid 1px;
     border-radius: 10px;
     justify-self: center;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .texto {
@@ -103,14 +107,17 @@ main {
     text-align: left;
     background-color: #bb8de086;
     border-radius: 10px;
+    
 }
 .texto p {
-    padding: 5px;
+    padding: 15px;
     color: #210d31;
+    
 }
 .texto a {
     text-decoration: none;  
     padding-left: 10px;
+    transition: color 0.5s, transform 0.5s;
 }
 
 .texto i {
@@ -121,8 +128,7 @@ main {
 
 .texto i:hover {
     color: #bb8de0;
-   transform: scale(1.2,1.2);
-
+   transform: scale(1.2);
 
 }
 
@@ -136,7 +142,7 @@ main {
 
 .nav i:hover {
     color: #bb8de0;
-   transform: scale(1.2,1.2);
+   transform: scale(1.2);
 
 
 }
