--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     font-family: "Dai Banna SIL", serif;
     background-image: url('imagens/fundo.jpg');
-   background-size: cover;
+    background-size: cover;
     margin: 0;
+    overflow-y: hidden;
+    
     
 }
 
-                                                    /* ===== Header ===== */
+                                                   /* ===== Header ===== */
 .header {
     display:flex; 
     flex-wrap: wrap;
@@ -19,13 +21,14 @@ body {
     max-height: 300px;
     min-height: auto;
     margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);   
 }
 
 .menu {
     display: flex; 
-    list-style: none;  
+    list-style: none;
+    
+    
 }
 
 .menu a {
@@ -33,6 +36,7 @@ body {
     font-size: 1.8em; 
     color: #e0fbfc; 
     transition: color 0.5s, transform 0.5s;
+    z-index: 1;
     
 }
 
@@ -89,13 +93,15 @@ main {
     
 }
 .principal img  {
-    max-width: 90%;
+    max-width: 95%;
     height: auto;
     display: block;
     border: #d0e8e959 solid 1px;
     border-radius: 10px;
     justify-self: center;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    
+    
 }
 
 .texto {
@@ -145,6 +151,18 @@ main {
    transform: scale(1.2);
 
 
+}
+
+footer {
+    background-color: #bb8de0;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+    font-weight: bold;
+    z-index: 1;
+    opacity: 0.9;
 }
 
 
